--- a/webPage1.html
+++ b/webPage1.html
@@ -53,8 +53,8 @@
 					
 						<!--Official website link-->
                         <section id="website">
-                            <h3>Official Website</h3>
-                            <a href="https://www.visitsharjah.com/en/activities/family/sharjah-maritime-museum/">Visit the official website</a>
+                            <h3>Website for more information:</h3>
+                            <a href="https://www.visitsharjah.com/en/activities/family/sharjah-maritime-museum/">Visit the website</a>
                         </section>
                     </article>
                 </td>
