--- a/webPage5.html
+++ b/webPage5.html
@@ -47,10 +47,10 @@
                         <!-- photos gallery Section -->
                         <section id="gallery">
                             <h3>Photo Gallery</h3>
-                            <img src="Heritage1.jpeg" alt="Maritime PIC1" width="400">
-                            <img src="Heritage2.jpeg" alt="Maritime PIC2" width="400">
-                            <img src="Heritage3.jpeg" alt="Maritime PIC3" width="400">
-							<img src="Heritage4.jpeg" alt="Maritime PIC4" width="400">
+                            <img src="Heritage1.jpeg" alt="Heritage PIC1" width="400">
+                            <img src="Heritage2.jpeg" alt="Heritage PIC2" width="400" height="240">
+                            <img src="Heritage3.jpeg" alt="Heritage PIC3" width="400"height="260">
+			    <img src="Heritage4.jpeg" alt="Heritage PIC4" width="400" height="260">
                         </section>
 					
 						<!--Official website link-->
