--- a/webPage1.html
+++ b/webPage1.html
@@ -45,7 +45,7 @@
                         <!-- photos gallery Section -->
                         <section id="gallery">
                             <h3>Photo Gallery</h3>
-                            <img src="Maritime1.jpeg" alt="Maritime PIC1" width="400">
+                            <img src="Maritime1.jpeg" alt="Maritime PIC1" width="400" height="175">
                             <img src="Maritime2.jpeg" alt="Maritime PIC2" width="400">
                             <img src="Maritime3.jpeg" alt="Maritime PIC3" width="400">
 							<img src="Maritime4.jpeg" alt="Maritime PIC4" width="400">
