--- a/webPage5.html
+++ b/webPage5.html
@@ -10,7 +10,7 @@
         <header>
 	    <img src="" alt="Website Logo" width="100">
             <img src="HeritageLOGO.jpeg" alt="Museum Logo" width="100">
-            <h1>Sharjah Maritime Museum</h1>
+            <h1>Sharjah Heritage Museum</h1>
         </header>
 		
 		<!-- navigation Menu (Will be adjusted later to be horizontal) -->
@@ -66,7 +66,7 @@
                         <section id="contact">
                             <h3><br>Contact Details</h3>
                             <dl>
-                                <dt><strong>Sharjah Maritime Museum </strong></dt>
+                                <dt><strong>Sharjah Heritage Museum</strong></dt>
                                     <br>
                                     <dd>UAE</dd>
 									<dd>Sharjah</dd>
