--- a/index.html
+++ b/index.html
@@ -65,34 +65,34 @@
 		
 		<section>
 		
-		<img class="shk" src="C:\Users\a3als\OneDrive\Desktop\web\sheikhSultan.jpg" alt="Sheikh Sultan">
+		<img class="shk" src="sheikhSultan.jpg" alt="Sheikh Sultan">
 		<em>H.H. Sheikh Dr. Sultan bin Mohammed AlQasimi, Supreme Council Member and Ruler of Sharjah </em>
 		<h3 id="quote"> "Museums are made to educate our children and our future generations."</h3>
 		</section>
 		
 		<section>
 			<a href="webPage1.html">
-			<img class="shk" src="C:\Users\a3als\Downloads\mairtimeLOGO.png" alt="mairtime museum" width="30%">
+			<img class="shk" src="mairtimeLOGO.png" alt="mairtime museum" width="30%">
 			<p style="text-align:center; font-size:20pt;"> Sharjah Maritime Museum </p>
 			</a>
 			
 			<a href="webPage2.html">
-			<img class="shk" src="C:\Users\a3als\Downloads\AquariumLOGO.jpeg" alt="Aquarium museum" width="30%">
+			<img class="shk" src="AquariumLOGO.jpeg" alt="Aquarium museum" width="30%">
 			<p style="text-align:center; font-size:20pt;"> Sharjah Aquarium </p>
 			</a>
 			
 			<a href="webPage3.html">
-			<img class="shk" src="C:\Users\a3als\Downloads\CarLOGO.jpeg" alt="Classic Car museum" width="30%">
+			<img class="shk" src="CarLOGO.jpeg" alt="Classic Car museum" width="30%">
 			<p style="text-align:center; font-size:20pt;"> Sharjah Classic Car Museum</p>
 			</a>
 			
 			<a href="webPage4.html">
-			<img class="shk" src="C:\Users\a3als\Downloads\ScienceLOGO.jpeg" alt="Science Museum" width="30%">
+			<img class="shk" src="ScienceLOGO.jpeg" alt="Science Museum" width="30%">
 			<p style="text-align:center; font-size:20pt;"> Sharjah Science Museum</p>
 			</a>
 			
 			<a href="webPage5.html">
-			<img class="shk" src="C:\Users\a3als\Downloads\HeritageLOGO.jpeg" alt="Heritage Museum" width="30%">
+			<img class="shk" src="HeritageLOGO.jpeg" alt="Heritage Museum" width="30%">
 			<p style="text-align:center; font-size:20pt;"> Sharjah Heritage Museum</p>
 			</a>
 			</section>
