--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<p style="text-align:center; font-size:20pt;"> Sharjah Maritime Museum </p>
 			</a>
 			
-			<a href="webPage2.html">
+			<a href="webpage2.html">
 			<img class="shk" src="AquariumLOGO.jpeg" alt="Aquarium museum" width="30%">
 			<p style="text-align:center; font-size:20pt;"> Sharjah Aquarium </p>
 			</a>
