--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 						margin-right:8%;
 						text-align:center;}
 			em{ 		font-size:10pt;
-						margin-left:20%;
-						text-align:center;}
+						margin-left:35%;
+						text-align:center;
+			  			clear:left;}
 		</style>			 
 	</head>
 	
