--- a/webPage1.html
+++ b/webPage1.html
@@ -8,7 +8,7 @@
     
     <body>
         <header>
-	    <img src="" alt="Website Logo" width="100">
+	    <img src="logo.png" alt="Website Logo" width="100">
             <img src="mairtimeLOGO.png" alt="Museum Logo" width="100">
             <h1>Sharjah Maritime Museum</h1>
         </header>
