--- a/webPage3.html
+++ b/webPage3.html
@@ -8,7 +8,7 @@
     
     <body>
         <header>
-	    <img src="" alt="Website Logo" width="100">
+	    <img src="logo.png" alt="Website Logo" width="100">
             <img src="CarLOGO.jpeg" alt="Museum Logo" width="100">
             <h1>Sharjah Classic Car Museum</h1>
         </header>
