--- a/webPage4.html
+++ b/webPage4.html
@@ -8,7 +8,7 @@
     
     <body>
         <header>
-	    <img src="" alt="Website Logo" width="100">
+	    <img src="logo.png" alt="Website Logo" width="100">
             <img src="ScienceLOGO.jpeg" alt="Museum Logo" width="100">
             <h1>Sharjah Science Museum</h1>
         </header>
