--- a/webPage5.html
+++ b/webPage5.html
@@ -8,7 +8,7 @@
     
     <body>
         <header>
-	    <img src="" alt="Website Logo" width="100">
+	    <img src="logo.png" alt="Website Logo" width="100">
             <img src="HeritageLOGO.jpeg" alt="Museum Logo" width="100">
             <h1>Sharjah Heritage Museum</h1>
         </header>
