--- a/webPage1.html
+++ b/webPage1.html
@@ -85,6 +85,7 @@
         </table>
         
         <footer>
+		<!-- will be adjuested to the center-->
 		<br>
 		<br>
 		<img src="logo.png" alt="Website Logo" width="100">		
