--- a/webpage2.html
+++ b/webpage2.html
@@ -90,8 +90,10 @@
         </table>
         
         <footer>
-            <!-- complete-->
-			
+            <!-- will be adjuested to the center-->
+		<br>
+		<br>
+		<img src="logo.png" alt="Website Logo" width="100">		
         </footer>
      
     </body>
