--- a/webPage4.html
+++ b/webPage4.html
@@ -83,7 +83,10 @@
         </table>
         
         <footer>
-            <!-- complete-->
+           <!-- will be adjuested to the center-->
+		<br>
+		<br>
+		<img src="logo.png" alt="Website Logo" width="100">	
 			
         </footer>
      
