--- a/webPage3.html
+++ b/webPage3.html
@@ -53,7 +53,7 @@
 						<!--Official website link-->
                         <section id="website">
                             <h3>Website for more information:</h3>
-                            <a href="https://www.visitsharjah.com/en/activities/family/sharjah-classic-car-museum/">Visit the website</a>
+                            <a href="https://www.shjocc.com/">Visit the website</a>
                         </section>
                     </article>
                 </td>
