--- a/webPage4.html
+++ b/webPage4.html
@@ -50,7 +50,7 @@
 						<!--Official website link-->
                         <section id="website">
                             <h3>Website for more information:</h3>
-                            <a href="https://www.sharjahmuseums.ae/en-US/Museums/Sharjah-Science-Museum">Visit the website</a>
+                            <a href="https://www.sharjahmuseums.ae/en-US/Museums/Sharjah-%E2%80%8EHeritage-%E2%80%8E%E2%80%8EMuseum">Visit the website</a>
                         </section>
                     </article>
                 </td>
