--- a/webPage1.html
+++ b/webPage1.html
@@ -53,7 +53,7 @@
 						<!--Official website link-->
                         <section id="website">
                             <h3>Website for more information:</h3>
-                            <a href="https://www.visitsharjah.com/en/activities/family/sharjah-maritime-museum/">Visit the website</a>
+                            <a href="https://www.sharjahmuseums.ae/en-us/museums/sharjah-maritime-museum">Visit the website</a>
                         </section>
                     </article>
                 </td>
