--- a/webPage5.html
+++ b/webPage5.html
@@ -55,7 +55,7 @@
 						<!--Official website link-->
                         <section id="website">
                             <h3>Website for more information:</h3>
-                            <a href="https://www.visitsharjah.com/en/activities/heritage/sharjah-heritage-museum/">Visit the website</a>
+                            <a href="https://www.sharjahmuseums.ae/en-US/Museums/Sharjah-%E2%80%8EHeritage-%E2%80%8E%E2%80%8EMuseum">Visit the website</a>
                         </section>
                     </article>
                 </td>
