--- a/webPage3.html
+++ b/webPage3.html
@@ -68,7 +68,7 @@
                                     <dd>UAE</dd>
 									<dd>Sharjah</dd>
                                     <br>
-                                    <dd><a href="mailto:info@smd.gov.ae">info@smd.gov.ae</a></dd>
+                                    <dd><a href="mailto:info@shjocc.shj.ae">info@shjocc.shj.ae</a></dd>
                                     <dd>+971 6 558 0058</dd>
                             </dl>
                         </section>
