--- a/webpage2.html
+++ b/webpage2.html
@@ -79,7 +79,7 @@
                         
                         <section id="location">
                             <h3>How to get there?</h3>
-                            <p>Sharjah Aquarium is located in Al Khan Old area; it is the first largest government educational center in the UAE.</p>
+                            <p>Sharjah Aquarium is located in Al Khan Old area</p>
                             <p><a href="https://maps.app.goo.gl/ThZ7t9qdkzk6AgN47">See on Google Maps</a></p>
                                     
                         </section>
