--- a/webPage3.html
+++ b/webPage3.html
@@ -63,7 +63,7 @@
                         <section id="contact">
                             <h3><br>Contact Details</h3>
                             <dl>
-                                <dt><strong>Sharjah Maritime Museum </strong></dt>
+                                <dt><strong>Sharjah Classic Car Museum</strong></dt>
                                     <br>
                                     <dd>UAE</dd>
 									<dd>Sharjah</dd>
