--- a/webPage4.html
+++ b/webPage4.html
@@ -60,7 +60,7 @@
                         <section id="contact">
                             <h3><br>Contact Details</h3>
                             <dl>
-                                <dt><strong>Sharjah Maritime Museum </strong></dt>
+                                <dt><strong>Sharjah Science Museum</strong></dt>
                                     <br>
                                     <dd>UAE</dd>
 									<dd>Sharjah</dd>
