--- a/index.html
+++ b/index.html
@@ -1,61 +1,41 @@
 <!DOCTYPE html>
 <html>
-	<head> 
-		<title> Sharjah Museums </title>
-		<meta charset="utf-8">
-	</head>
-	
-	<header>
-		<div>
-		<div></div>
-		<div> SHARJAH MUSEUMS </div>
+<head>
+	<title> SHJ museums </title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="index.css">
+</head>
+<body>
+		<div class="banner">
+			<div class="nav">
+				<img src="logo.png" alt="logo" class="logo">
+				<ul>
+					<li><a href="main.html">HOME </a> </li>
+					<li><a href="main.html/#museums">MUSEUMS </a> </li>
+					<li><a href="#">SURVEY </a> </li>
+				</ul>
+			</div>
+			<div class="content">	
+				<h1> SHARJAH MUSEUMS </h1>
+				<div>
+					<a href="main.html"> <button type="button" ><span></span> VISIT </button> </a>
+				</div>
+			</div>
 		</div>
-	</header>
-	<body>
+</body>
+</html>		
 	
 	
 	
-	<div>
-		<div
-		<p> Sharjah city is renowned for its rich cultural heritage, and its museums play a significant role in preserving and showcasing this legacy.
-			Sharjah is home to more than 22 museums, each offering unique insights into the region’s rich cultural and historical heritage, covering every aspect of life and culture.
-			They offer a peep into a fascinating world and take you on a flight of imagination. 	
-		</p>
-		</div>
-		
-		<section>
-		
-		<img class="shk" src="sheikhSultan.jpg" alt="Sheikh Sultan">
-		<em>H.H. Sheikh Dr. Sultan bin Mohammed AlQasimi, Supreme Council Member and Ruler of Sharjah </em>
-		<h3 id="quote"> "Museums are made to educate our children and our future generations."</h3>
-		</section>
-		
-		<section>
-			<a href="webPage1.html">
-			<img class="shk" src="mairtimeLOGO.png" alt="mairtime museum" width="30%">
-			<p> Sharjah Maritime Museum </p>
-			</a>
-			
-			<a href="webPage2.html">
-			<img class="shk" src="AquariumLOGO.jpeg" alt="Aquarium museum" width="30%">
-			<p> Sharjah Aquarium </p>
-			</a>
-			
-			<a href="webPage3.html">
-			<img class="shk" src="CarLOGO.jpeg" alt="Classic Car museum" width="30%">
-			<p> Sharjah Classic Car Museum</p>
-			</a>
-			
-			<a href="webPage4.html">
-			<img class="shk" src="ScienceLOGO.jpeg" alt="Science Museum" width="30%">
-			<p> Sharjah Science Museum</p>
-			</a>
-			
-			<a href="webPage5.html">
-			<img class="shk" src="HeritageLOGO.jpeg" alt="Heritage Museum" width="30%">
-			<p> Sharjah Heritage Museum</p>
-			</a>
-			</section>
-	</body>	
-		
-</html>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+
