--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 				<img src="logo.png" alt="logo" class="logo">
 				<ul>
 					<li><a href="main.html">HOME </a> </li>
-					<li><a href="main.html/#museums">MUSEUMS </a> </li>
+					<li><a href="main.html#museums">MUSEUMS </a> </li>
 					<li><a href="#">SURVEY </a> </li>
 				</ul>
 			</div>
-			<div class="content">	
+			<div id="content">	
 				<h1> SHARJAH MUSEUMS </h1>
 				<div>
 					<a href="main.html"> <button type="button" ><span></span> VISIT </button> </a>
