--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<li><a href="#">SURVEY </a> </li>
 				</ul>
 			</div>
-			<div id="content">	
+			<div class="content">	
 				<h1> SHARJAH MUSEUMS </h1>
 				<div>
 					<a href="main.html"> <button type="button" ><span></span> VISIT </button> </a>
