--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 		<div class="nav">
 				<img src="logo.png" alt="logo" class="logo">
 				<ul>
-					<li><a href="#">HOME </a> </li>
-					<li><a href="#">MUSEUMS </a> </li>
+					<li><a href="#content">HOME </a> </li>
+					<li><a href="#museums">MUSEUMS </a> </li>
 					<li><a href="#">SURVEY </a> </li>
 				</ul>
 			</div>
@@ -18,7 +18,7 @@
 	
 	
 	
-	<div class="content">
+	<div id="content">
 		<div class="intro">
 		<p> Sharjah city is renowned for its rich cultural heritage, and its museums play a significant role in preserving and showcasing this legacy.
 			Sharjah is home to more than 22 museums, each offering unique insights into the region’s rich cultural and historical heritage, covering every aspect of life and culture.
