--- a/webPage1.html
+++ b/webPage1.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Sharjah Maritime Museum</title>
-	<link ref="stylesheet" href="pagesStyle.css">
+        <link rel="stylesheet" href="pagesStyle.css">
     </head>
     
     <body>
