--- a/webpage2.html
+++ b/webpage2.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>Sharjah Aquarium</title>
+        <link rel="stylesheet" href="pagesStyle.css">
+
     </head>
     
     <body>
