--- a/webPage1.html
+++ b/webPage1.html
@@ -46,7 +46,7 @@
             .container img:nth-child(3) {
                 animation-delay: 6s;
             }
-            </style>
+        </style>
     </head>
     
     <body>
@@ -85,6 +85,7 @@
 				history and culture.</p>
                         </section>
                         <!-- photos gallery Section -->
+                        <h2 style="text-shadow: 2px 2px 5px #ad792f;">Photo Gallery</h2>
                         <div class="container">
                                 <img src="Maritime1.jpeg" alt="Maritime Exhibit 1">
                                 <img src="Maritime2.jpeg" alt="Maritime Exhibit 2">
