--- a/webPage4.html
+++ b/webPage4.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>Sharjah Science Museum</title>
+	<link rel="stylesheet" href="pagesStyle.css">
+
 	<style>
             @keyframes fade {
                        0% {
