--- a/webPage5.html
+++ b/webPage5.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="utf-8">
         <title>Sharjah Heritage Museum</title>
+
+	<link rel="stylesheet" href="pagesStyle.css">
+
 	<style>
             @keyframes fade {
                        0% {
