--- a/webPage2.html
+++ b/webPage2.html
@@ -131,7 +131,7 @@
         </table>
         
         <footer>
-		<img src="logo.png" alt="Website Logo" width="100">
+		<img src="logo1.png" alt="Website Logo" width="100">
             	<p>&copy;2024 Sharjah Aquarium. All rights reserved.</p>
 	
         </footer>
