--- a/webPage2.html
+++ b/webPage2.html
@@ -57,11 +57,12 @@
 		
         <nav>
             <ul>
+		<li><a href="main.html">Home</a></li>
                 <li><a href="#overview">Overview</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact Us</a></li>
-				<li><a href="#location">How to Get There</a></li>
-				<li><a href="#website">Official website</a></li>
+		<li><a href="#location">How to Get There</a></li>
+		<li><a href="#website">Official website</a></li>
             </ul>
         </nav>
 
