--- a/webPage5.html
+++ b/webPage5.html
@@ -59,6 +59,7 @@
 		<!-- navigation Menu (Will be adjusted later to be horizontal) -->
         <nav>
             <ul>
+		<li><a href="main.html">Home</a></li>
                 <li><a href="#overview">Overview</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact Us</a></li>
