--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="main.css">			 
 	<header>
 		<div class="nav">
-				<img src="logo.png" alt="logo" class="logo">
+				<img src="logo1.png" alt="logo" class="logo">
 				<ul>
 					<li><a href="#content">HOME </a> </li>
 					<li><a href="#museums">MUSEUMS </a> </li>
