--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 		<div class="banner">
 			<div class="nav">
-				<img src="logo.png" alt="logo" class="logo">
+				<img src="logo1.png" alt="logo" class="logo">
 				<ul>
 					<li><a href="main.html">HOME </a> </li>
 					<li><a href="main.html#museums">MUSEUMS </a> </li>
