--- a/webPage1.html
+++ b/webPage1.html
@@ -86,12 +86,14 @@
 				history and culture.</p>
                         </section>
                         <!-- photos gallery Section -->
+			<section id="gallery">
                         <h2 style="text-shadow: 2px 2px 5px #ad792f;">Photo Gallery</h2>
                         <div class="container">
                                 <img src="Maritime1.jpeg" alt="Maritime Exhibit 1">
                                 <img src="Maritime2.jpeg" alt="Maritime Exhibit 2">
                                 <img src="Maritime3.jpeg" alt="Maritime Exhibit 3">
                         </div>
+			</section>
 					
 						<!--Official website link-->
                         <section id="website">
