--- a/webPage2.html
+++ b/webPage2.html
@@ -89,6 +89,7 @@
 							
                         </section>
                         <!-- photos gallery Section -->
+			<section id="gallery">
 			<h2 style="text-shadow: 2px 2px 5px #ad792f;">Photo Gallery</h2>
 			<div class="container">
                             <img src="Aquarium1.jpeg" alt="Aquarium PIC1">
@@ -96,7 +97,7 @@
                             <img src="Aquarium3.jpeg" alt="Aquarium PIC3">
 			    <img src="Aquarium4.jpeg" alt="Aquarium PIC4">
                         </div>
-					
+			</section>	
 						<!--Official website link-->
                         <section id="website">
                              <h2 style="text-shadow: 2px 2px 5px #ad792f;">Website for more information:</h2>
