--- a/webPage3.html
+++ b/webPage3.html
@@ -87,12 +87,14 @@
 							industry.</p>
                         </section>
                         <!-- photos gallery Section -->
+			<section id="gallery">
                         <h2 style="text-shadow: 2px 2px 5px #ad792f;">Photo Gallery</h2>
                         <div class="container">
                             <img src="Car-museum1.jpeg" alt="Car PIC1" width="400">
                             <img src="Car-museum2.jpeg" alt="Car PIC2" width="400">
                             <img src="Car-museum3.jpeg" alt="Car PIC3" width="400">
                         </div>
+			</section>
 					
 						<!--Official website link-->
                         <section id="website">
