--- a/webPage4.html
+++ b/webPage4.html
@@ -85,11 +85,13 @@
 							interactive sessions are designed to inspire curiosity, innovation, and creativity among both children and adults.</p>
                         </section>
                         <!-- photos gallery Section -->
+			<section id="gallery">
                         <h2 style="text-shadow: 2px 2px 5px #ad792f;">Photo Gallery</h2>
                         <div class="container">
                             <img src="Science-museum1.jpeg" alt="Science PIC1" width="400">
                             <img src="Science-museum2.webp" alt="Science PIC2" width="400">
                         </div>
+			</section>
 					
 						<!--Official website link-->
                         <section id="website">
