--- a/webPage5.html
+++ b/webPage5.html
@@ -89,6 +89,7 @@
 							it a must-visit for anyone interested in understanding the emirate’s roots.</p>
                         </section>
                         <!-- photos gallery Section -->
+			<section id="gallery">
                         <h2 style="text-shadow: 2px 2px 5px #ad792f;">Photo Gallery</h2>
                         <div class="container">
                             <img src="Heritage1.jpeg" alt="Heritage PIC1" width="400">
@@ -96,6 +97,7 @@
                             <img src="Heritage3.jpeg" alt="Heritage PIC3" width="400"height="260">
 			    <img src="Heritage4.jpeg" alt="Heritage PIC4" width="400" height="260">
                         </div>
+			</section>
 					
 						<!--Official website link-->
                         <section id="website">
