--- a/webPage4.html
+++ b/webPage4.html
@@ -40,6 +40,10 @@
             
             
             /* w3schools selcet the image (num) from the container */
+		
+	    .container img:nth-child(1) {
+                animation-delay: 0s;
+            }
             .container img:nth-child(2) {
                 animation-delay: 4s;
             }
