--- a/webPage1.html
+++ b/webPage1.html
@@ -11,10 +11,13 @@
                        0% {
                            opacity: 0;
                        }
-                       50% {
+                       25% {
                            opacity: 1;
                        }
-                       100% {
+                       75% {
+                           opacity: 1;
+                       }                       
+		       100% {
                            opacity: 0;
                        }
                    }
