--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="main.css">			 
 	<header>
 		<div class="nav">
-				<img src="logo1.png" alt="logo" class="logo">
+				<img src="logo1.png" alt="logo" class="logo" style="margin-left:10px;">
 				<ul>
 					<li><a href="#content">HOME </a> </li>
 					<li><a href="#museums">MUSEUMS </a> </li>
@@ -20,7 +20,9 @@
 	
 	<div id="content">
 		<div class="intro">
-		<p> Sharjah city is renowned for its rich cultural heritage, and its museums play a significant role in preserving and showcasing this legacy.
+		<h1 style="text-align:center; text-shadow:-2px 0 #987554, 0 2px #987554, 2px 0 #987554, 0 -2px #987554; color:#e9d4b7;"> SHARJAH MUSEUMS  </h1>
+		<p style="text-align-last:left; padding-left:10px; padding-right:10px; border-left: solid 3px #987554; border-right: solid 3px #987554;"> 
+			 Sharjah city is renowned for its rich cultural heritage, and its museums play a significant role in preserving and showcasing this legacy.
 			Sharjah is home to more than 22 museums, each offering unique insights into the region’s rich cultural and historical heritage, covering every aspect of life and culture.
 			They offer a peep into a fascinating world and take you on a flight of imagination. 	
 		</p>
