--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> SHJ museums </title>
+	<title> SHARJAH MUSEUMS </title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<link type="text/html" href="main.html">
+	<link type="text/html" href="survey.html">
 </head>
 <body>
 		<div class="banner">
@@ -12,7 +14,7 @@
 				<ul>
 					<li><a href="main.html">HOME </a> </li>
 					<li><a href="main.html#museums">MUSEUMS </a> </li>
-					<li><a href="#">SURVEY </a> </li>
+					<li><a href="survey.html#surveyForm">SURVEY </a> </li>
 				</ul>
 			</div>
 			<div class="content">	
