--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head> 
-		<title> Sharjah Museums </title>
+		<title> SHARJAH MUSEUMS </title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="main.css">			 
+		<link rel="stylesheet" type="text/css" href="main.css">		
+		<link rel="stylesheet" type="text/css" href="survey.css">
 	<header>
 		<div class="nav">
 				<img src="logo1.png" alt="logo" class="logo" style="margin-left:10px;">
 				<ul>
 					<li><a href="#content">HOME </a> </li>
 					<li><a href="#museums">MUSEUMS </a> </li>
-					<li><a href="#">SURVEY </a> </li>
+					<li><a href="survey.html">SURVEY </a> </li>
 				</ul>
 			</div>
 	</header>	
