--- a/survey.html
+++ b/survey.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
    
-    <title>Museum Website Improvement Survey</title>
+    <title>Museum Survey</title>
     <style>
 		body {
 		font-family: sans-serif, Arial;
