--- a/survey.html
+++ b/survey.html
@@ -67,7 +67,7 @@
     <div class="container">
 	<h1 id="greeting"></h1>
        
-        <form id="surveyForm" method="get" action="main.html">
+        <form id="surveyForm" method="post" action="https://shalali04.github.io/12_5/main.html">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
 
