--- a/main.html
+++ b/main.html
@@ -15,6 +15,9 @@
 				</ul>
 			</div>
 	</header>	
+	<script>
+		window.alert("Help us to IMPROVE, join the survey please");
+	</script>		
 	<body>
 	
 	
