--- a/survey.html
+++ b/survey.html
@@ -6,7 +6,7 @@
     <title>Museum Survey</title>
     <style>
 		body {
-		font-family: sans-serif, Arial;
+		font-family:  georgia,times new roman;
 		background-color: #f4eadc;;
 		margin: 0;
 		padding: 0;
