--- a/webPage5.html
+++ b/webPage5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sharjah Heritage Museum</title>
-	<link rel = "stylesheet" type ="text/css" href = "pageStyle.css">
+	<link rel="stylesheet" href="pagesStyle.css">
 	<style>
             @keyframes fade {
                        0% {
