--- a/webPage2.html
+++ b/webPage2.html
@@ -137,7 +137,7 @@
 				<h2> Check Shrjah's Museums </h2>
 				<span> <a href="webpage4.html"> <img id="rec" src="ScienceLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Science Museum<</div> </a> </span>
 				<span> <a href="webpage3.html"> <img id="rec" src="CarLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Classic Car Museum </div> </a> </span>
-				<span> <a href="webpage5.html"> <img id="rec" src="HeritageLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Aquarium </div> </a> </span>
+				<span> <a href="webpage5.html"> <img id="rec" src="HeritageLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Heritage Museum </div> </a> </span>
 			</section>
                 </td>
             </tr>
