--- a/webPage3.html
+++ b/webPage3.html
@@ -129,9 +129,9 @@
 						<br><br>
 						<section style="padding-bottom:100px;">
 						<h2> Check Shrjah's Museums </h2>
-						<span> <a href="webpage4.html"> <img id="rec" src="ScienceLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Science Museum</div> </a> </span>
-						<span> <a href="webpage3.html"> <img id="rec" src="CarLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Classic Car Museum </div> </a> </span>
-						<span> <a href="webpage2.html"> <img id="rec" src="AquariumLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Aquarium </div> </a> </span>
+						<span> <a href="webPage4.html"> <img id="rec" src="ScienceLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Science Museum</div> </a> </span>
+						<span> <a href="webPage3.html"> <img id="rec" src="CarLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Classic Car Museum </div> </a> </span>
+						<span> <a href="webPage2.html"> <img id="rec" src="AquariumLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Aquarium </div> </a> </span>
 						
 					</section>	
                     </div>
