--- a/webPage1.html
+++ b/webPage1.html
@@ -41,24 +41,53 @@
             
             /* w3schools selcet the image (num) from the container */
             .container img:nth-child(2) {
-                animation-delay: 3s;
+                	animation-delay: 3s;
             }
             .container img:nth-child(3) {
-                animation-delay: 6s;
+                	animation-delay: 6s;
             }
-			#rec	{	
-						display:block;
-						margin-left:auto; 
-						margin-right:auto;
-						padding-top:5px;
-					}	
-			h2		{
-						text-shadow: 2px 2px 5px #ad792f;
-					}	
-        </style>
+	    #rec	{	
+			display:block;
+			margin-left:auto; 
+			margin-right:auto;
+			padding-top:5px;
+	    }	
+	    h2		{
+			text-shadow: 2px 2px 5px #ad792f;
+			}	
+
+	    /* styling Back button */
+	    input[type="button"] 
+	    {
+		        display: block;
+		        margin: 20px auto;
+			padding: 10px 20px;
+		        font-size: 16px;
+		        background-color: #ad792f;
+		        color: white;
+		        border: none;
+		        border-radius: 5px;
+		        cursor: pointer;
+            }
+	    input[type="button"]:hover 
+	    {
+            		background-color: #8c643b;
+            }
+	</style>
+	
+    	<script>
+		/* w3schools JavaScript Window History */
+        	function goBack() 
+		{
+            		window.history.back();
+        	}
+    	</script>
     </head>
     
     <body>
+	/* w3schools JavaScript Window History */
+	<input type="button" value="Back" onclick="goBack()">
+
 	<img id ="MLogo" src="mairtimeLOGO.png" alt="Museum Logo"  height="150" width="150" style=" left:50px; top:50px;">
         <header>
 	<div class="sec1">
