--- a/webPage1.html
+++ b/webPage1.html
@@ -85,7 +85,7 @@
     </head>
     
     <body>
-	/* w3schools JavaScript Window History */
+	<!-- w3schools JavaScript Window History -->
 	<input type="button" value="Back" onclick="goBack()">
 
 	<img id ="MLogo" src="mairtimeLOGO.png" alt="Museum Logo"  height="150" width="150" style=" left:50px; top:50px;">
