--- a/webPage1.html
+++ b/webPage1.html
@@ -59,15 +59,16 @@
 	    /* styling Back button */
 	    input[type="button"] 
 	    {
-		        display: block;
-		        margin: 20px auto;
-			padding: 10px 20px;
-		        font-size: 16px;
-		        background-color: #ad792f;
-		        color: white;
-		        border: none;
-		        border-radius: 5px;
-		        cursor: pointer;
+	            position: absolute;
+	            top: 20px;
+	            left: 20px;
+	            padding: 10px 20px;
+	            font-size: 16px;
+	            background-color: #ad792f;
+	            color: white;
+	            border: none;
+	            border-radius: 5px;
+	            cursor: pointer;
             }
 	    input[type="button"]:hover 
 	    {
