--- a/webPage1.html
+++ b/webPage1.html
@@ -54,8 +54,13 @@
 	    }	
 	    h2		{
 			text-shadow: 2px 2px 5px #ad792f;
-			}	
-
+			}
+		
+	    #MLogo 	{
+		        display: block;
+		        margin: 0 auto; 
+		        margin-top: 20px; 
+        		}
 	    /* styling Back button */
 	    input[type="button"] 
 	    {
