--- a/webPage1.html
+++ b/webPage1.html
@@ -55,6 +55,11 @@
 	    h2		{
 			text-shadow: 2px 2px 5px #ad792f;
 			}
+            #MLogo 	{
+		        display: block;
+		        margin: 0 auto;
+		        margin-top: 20px;
+	        	}
 		
 	    /* styling Back button */
 	    input[type="button"] 
@@ -89,7 +94,7 @@
 	<!-- w3schools JavaScript Window History -->
 	<input type="button" value="Back" onclick="goBack()">
 
-	<img id ="MLogo" src="mairtimeLOGO.png" alt="Museum Logo"  height="150" width="150" style="display: block; margin: 20px auto;">
+	<img id ="MLogo" src="mairtimeLOGO.png" alt="Museum Logo"  height="150" width="150">
         <header>
 	<div class="sec1">
 		<h1 style="text-shadow: 2px 2px 5px #ad792f;">Sharjah Maritime Museum</h1>
