--- a/webPage1.html
+++ b/webPage1.html
@@ -46,6 +46,26 @@
             .container img:nth-child(3) {
                 	animation-delay: 6s;
             }
+            
+            /* styling Back button */
+            input[type="button"]
+            {
+                    position: absolute;
+                    top: 20px;
+                    left: 20px;
+                    padding: 10px 20px;
+                    font-size: 16px;
+                    background-color: #ad792f;
+                    color: white;
+                    border: none;
+                    border-radius: 5px;
+                    cursor: pointer;
+                }
+            input[type="button"]:hover
+            {
+                        background-color: #8c643b;
+                }
+
         </style>
     	<script>
 		/* w3schools JavaScript Window History */
