--- a/webPage2.html
+++ b/webPage2.html
@@ -77,6 +77,9 @@
     </head>
     
     <body>
+	<!-- w3schools JavaScript Window History -->
+	<input type="button" value="Back" onclick="goBack()">
+
 	    <img id ="MLogo" src="AquariumLOGO.jpeg" alt="Museum Logo"  height="150" width="150">
 	<header>
 	<div class="sec1">
