--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 	<script>
 	    	function show_alert() 
 		{
-	        	window.alert( greetUser() + " Welcome to Sharjah Maritime Museum!\nWe value your feedback, please take a moment to complete our survey and help us improve your experience.");
+	        	window.alert( greetUser() + " Welcome to Simply Sharjah!\nYour feedback matters! Please take a moment to complete our survey.");
 	    	}
 	
 	    	function greetUser() 
