--- a/webPage3.html
+++ b/webPage3.html
@@ -158,7 +158,7 @@
 						<section style="padding-bottom:100px;">
 						<h2> Check Shrjah's Museums </h2>
 						<span> <a href="webPage4.html"> <img id="rec" src="ScienceLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Science Museum</div> </a> </span>
-						<span> <a href="webPage3.html"> <img id="rec" src="CarLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Classic Car Museum </div> </a> </span>
+						<span> <a href="webPage1.html"> <img id="rec" src="mairtimeLOGO.png" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Maritime Museum </div> </a> </span>
 						<span> <a href="webPage2.html"> <img id="rec" src="AquariumLOGO.jpeg" width="60" height="60"> <div style="text-align:center; border-bottom:solid 2px #987554; padding-top:10px; padding-bottom:5px;">Sharjah Aquarium </div> </a> </span>
 						
 					</section>	
