--- a/webPage4.html
+++ b/webPage4.html
@@ -95,7 +95,7 @@
                 <li><a href="#overview">Overview</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact Us</a></li>
-            <li><a href="https://www.sharjahmuseums.ae/en-US/Museums/Sharjah-%E2%80%8EHeritage-%E2%80%8E%E2%80%8EMuseum">Official website</a></li>
+            <li><a href="https://www.sharjahmuseums.ae/en-US/Museums/Sharjah-Science-Museum">Official website</a></li>
             </ul>
         </nav>
 
@@ -125,7 +125,7 @@
             <!--Official website link-->
                         <div id="website">
                             <h2>Website for more information:</h2>
-                            <a href="https://www.sharjahmuseums.ae/en-US/Museums/Sharjah-%E2%80%8EHeritage-%E2%80%8E%E2%80%8EMuseum">Visit the website</a>
+                            <a href="https://www.sharjahmuseums.ae/en-US/Museums/Sharjah-Science-Museum">Visit the website</a>
                         </div>
                     </section>
                 </td>
